<resources>
    <string name="app_name">Care With Us</string>
    <string name="login">Let\'s sign in first!</string>
    <string name="person_login_image">Person login image</string>
    <string name="carewithus_description">Welcome to CareWithUs! This application will help you to study the material well</string>
    <string name="hello">Hello!</string>
    <string name="email_input">Input Your Email</string>
    <string name="password_not_valid">Password must be %1$d characters</string>
    <string name="input_password">Input Your Password</string>
    <string name="btn_login">Login</string>
    <string name="dont_hv_acc">Don\'t have account?</string>
    <string name="reg_here">Register Here</string>
    <string name="reg_txt">Register</string>
    <string name="create_ur">Create Your Account</string>
    <string name="reg_desc">Let us know about your set!</string>
    <string name="input_name">Input Your Name</string>
    <string name="btn_register">Register</string>
    <string name="already_have_account">Already have account?</string>
    <string name="log_here">Login here</string>
    <string name="logout_btn">Logout</string>
    <string name="add_category">Add Category</string>
    <string name="the_description">The description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="admin_dashboard">Admin Dashboard</string>
</resources>